# project-1-ml4hc

./: .gitignore  First_Eda.Rmd  First_Eda.html  Makefile  README.md  proj1_til.ipynb  prove.py  pyproject.toml  requirements.txt
docs/: README.md  mkdocs.yml
docs/docs/: index.md
notebooks/: .Rhistory  1_Q1_data_processing.ipynb  1_fb_data_preprocess.ipynb  1_fb_data_process.ipynb  1_sf_logistic.ipynb  2_Q2_supervised_learning.ipynb  2_fb_data_visual.ipynb  2_fb_feature_engineering.ipynb  2_sf_Repr_Learning.ipynb  3_Q3_representation_learning.ipynb  3_fb_data_preprocessing.ipynb  3_sf_Q3_final.ipynb  4_Q4_foundation_models.ipynb  4_fb_Q2_1.ipynb  4_fb_sup_learning.ipynb  5_fb_prova.ipynb  5_fb_rnn.ipynb  5_fb_rnn_2.ipynb  6_fb_transformers.ipynb  7_fb_new_rnn.ipynb  8_fb_repr_learning.ipynb  First_Eda.Rmd
project_1/: Q1_1_data-preprocessing.py  config.py  dataset.py  example.py  features.py  loading.py
project_1/Q1/: Q1_1_data-transform.py  Q1_3_data-preprocessing.py
project_1/Q2/: Q2_3_tokenizing_TZV.py  tokenizer.py
project_1/Q4/: Embeddinggeneration.py  Q4.ipynb  Q4_1_1_generate_summaries.py  Q4_1_2_llm_prediction.py  Q4_2_1_embedding_generation.py  Q4_2_2_embedding_regression.py  Q4_3_chronos_embedding_regression.py  chronos_embedding_generation.py  run_llm_prediction.py
scripts/: Q1_data_processing.sh  run_Q4_1_2_llm_prediction.sh  run_Q4_2_1_embedding_generation.sh  run_Q4_3_chronos_embedding_regression.sh  run_tokenizer.sh  test.sh
